<resources>
    <string name="app_name">UniWalker</string>
    <string name="_0AM">00:00</string>
    <string name="_1AM">01:00</string>
    <string name="_2AM">02:00</string>
    <string name="_3AM">03:00</string>
    <string name="_4AM">04:00</string>
    <string name="_5AM">05:00</string>
    <string name="_6AM">06:00</string>
    <string name="_7AM">07:00</string>
    <string name="_8AM">08:00</string>
    <string name="_9AM">09:00</string>
    <string name="_10AM">10:00</string>
    <string name="_11AM">11:00</string>
    <string name="_12PM">12:00</string>
    <string name="_13PM">13:00</string>
    <string name="_14PM">14:00</string>
    <string name="_15PM">15:00</string>
    <string name="_16PM">16:00</string>
    <string name="_17PM">17:00</string>
    <string name="_18PM">18:00</string>
    <string name="_19PM">19:00</string>
    <string name="_20PM">20:00</string>
    <string name="_21PM">21:00</string>
    <string name="_22PM">22:00</string>
    <string name="_23PM">23:00</string>
    <string name="_24PM">24:00</string>
    <string name="event_starttime">Start Time</string>
    <string name="event_endtime">End Time</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Location*</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="event_description">Description*</string>
    <string name="event_type">Event Type</string>
    <string name="current_day_date">EEEE, MMM d, yyyy</string>
    <string name="add_event">Add Event</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_setting">Setting</string>
    <string name="detail_event_name">Event Name:</string>
    <string name="event_date">EEEE, MM dd</string>
    <string name="event_time">HH:MM - HH:MM</string>
    <string name="event_location_tag">Location</string>
    <string name="event_description_tag">Description</string>
    <string name="event_detail_title">Event Detail</string>
    <string name="current_time">HH:MM</string>
</resources>
