<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_startTimeDetail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="end">

            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_starttime"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_endTimeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_endtime"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_eventNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_eventLocationDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_eventDescriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_eventTypeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_type"
                android:inputType="none"
                android:focusable="false" />
        </android.support.design.widget.TextInputLayout>
    </TableRow>

    <Spinner
        android:id="@+id/sp_eventTypeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_delete_eventDetail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_back_eventDetail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update_eventDetail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </TableRow>


</TableLayout>
</ScrollView>