<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_detail"
            android:background="#03338e">

            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/current_day_date"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_detail">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:text="@string/event_name"/>

                <TextView
                    android:id="@+id/tv_detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/event_type"
                    android:textColor="#80000000"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="15dp"
                    />
                <TextView
                    android:id="@+id/tv_detail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_below="@+id/tv_detail_name"/>

                <View
                    android:id="@+id/v_divider1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_detail_duration"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="#80000000"
                    />
                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location_tag"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/v_divider1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp" />
                <TextView
                    android:id="@+id/tv_detail_location_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location"
                    android:textColor="#80000000"
                    android:textSize="18sp"
                    android:layout_below="@+id/tv_detail_location"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp" />
                <View
                    android:id="@+id/v_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_detail_location_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="#80000000" />
                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description_tag"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/v_divider2"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp" />
                <TextView
                    android:id="@+id/tv_detail_description_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description"
                    android:textColor="#80000000"
                    android:textSize="18sp"
                    android:layout_below="@+id/tv_detail_description"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@id/tv_detail_description_content">
                <Button
                    android:id="@+id/btn_back1"
                    android:text="@string/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="300dp"
                    />
                <!--<Button-->
                    <!--android:id="@+id/btn_delete1"-->
                    <!--android:text="@string/delete"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="300dp"-->
                    <!--android:layout_marginLeft="25dp"-->
                    <!--android:layout_toRightOf="@+id/btn_back1" />-->
                <!--<Button-->
                    <!--android:id="@+id/btn_update1"-->
                    <!--android:text="@string/update"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="300dp"-->
                    <!--android:layout_marginLeft="25dp"-->
                    <!--android:layout_toRightOf="@+id/btn_delete1" />-->
                </RelativeLayout>

            </RelativeLayout>


        </ScrollView>
</RelativeLayout>