<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.v7.widget.CardView
    android:id="@+id/event_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#BF00447c"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/ibtn_dot"
            android:id="@+id/cv_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/cv_tv_name"
            android:layout_toRightOf="@+id/ibtn_dot"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/cv_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>
        <ImageButton
            android:id="@+id/ibtn_dot"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/cv_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_grade"/>
        <TextView
            android:id="@+id/cv_tv_lication"
            android:layout_toRightOf="@+id/ibtn_dot"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/cv_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>