<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_home"
        android:background="#03338e">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_directions_walk"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_home">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_homecard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="#BF00447c"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="8dp"
                app:contentPadding="10dp"
                app:cardPreventCornerOverlap="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextClock
                    android:id="@+id/tv_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format24Hour="HH:mm"
                    android:format12Hour="HH:mm"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/tv_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_day_date"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_below="@+id/tv_current_time"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>
                <ImageButton
                    android:id="@+id/btn_add"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/add_event"
                    app:srcCompat="@drawable/ic_addevent" />
                <View
                    android:id="@+id/v_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/tv_today"
                    android:layout_marginTop="5dp"
                    android:background="#80ffffff" />
            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_eventlist"
                android:layout_below="@+id/cv_homecard"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>


    </ScrollView>
</RelativeLayout>